add_executable(runRectangleTest test-rectangle.cpp)
target_link_libraries(runRectangleTest SVGNativeViewerLib)
target_link_libraries(runRectangleTest gtest_main)
add_test(NAME rectangle_unit_test COMMAND runRectangleTest)

add_executable(runIntervalTest test-interval.cpp)
target_link_libraries(runIntervalTest SVGNativeViewerLib)
target_link_libraries(runIntervalTest gtest_main)
add_test(NAME interval_unit_test COMMAND runIntervalTest)

pkg_check_modules(LIBRSVG REQUIRED librsvg-2.0)
add_executable(runBboxTest test-bounds.cpp)
target_link_libraries(runBboxTest SVGNativeViewerLib)
target_link_libraries(runBboxTest gtest_main)
add_test(NAME bbox_test COMMAND runBboxTest)
target_link_libraries(runBboxTest "${LIBRSVG_LINK_LIBRARIES}")
target_include_directories(runBboxTest SYSTEM PUBLIC "${LIBRSVG_INCLUDE_DIRS}")
